ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: diplom.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: diplom-go-service
                port:
                  number: 8080
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: diplom-postgres-service
                port:
                  number: 5432
